--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,56 @@
 body{
     background-color: #FFDDDD;
+    padding: 0;
+    margin: 0;
 }
 
-.sub-section{
-    border: 1px solid blue;
-    padding: 5px;
-    margin: 5px;
-}
-
-#heading{
-    background-color: #00000010;
-    text-align: center;
+audio{
+    width: 100%;
 }
 
 #audio-span{
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    width: 25vw;
+    top: 5px;
+    right: 5px;
+
+}
+.sub-section{
+    padding: 10px 20px;
+    margin: 5px;
+    min-width: 90vw;
+    overflow-y: auto;
+    border-radius: 10px;
+    background-color: #00000010;
+}
+
+main {
+    background-color: #ff00006f;
+    display: flex;
+    overflow-x: auto;
+    height: 80vh;
+    box-sizing: border-box;
+}
+
+#heading{
+    display: flex;
+    padding: 10px;
+    transition: 0.2s;
+    height: 20vh;
+    box-sizing: border-box;
+} 
+
+#heading:hover{
+    background-color: #00000010;
 }
 
 h1, h2, h3 {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    margin-bottom: 5px;
 }
 
 #accomplishments-span{
@@ -32,6 +62,7 @@ h1, h2, h3 {
     margin-right: 5px;
 }
 
-#portrait{
+#profile-pic{
     border-radius: 100%;
+    width: 100px;
 }
